greeter/manifests/greeterv1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: greeter-v1
spec:
  replicas: 1

  selector:
    matchLabels:
      app: greeter
      version: v1

  template:
    metadata:
      labels:
        app: greeter
        version: v1

    spec:
      containers:
      - name: greeter

        image: rakhicc/greeter:v1
        imagePullPolicy: Always
