greeter/manifests/greeterv2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: greeter-v2

spec:
  replicas: 1

  selector:
    matchLabels:
      app: greeter
      version: v2

  template:
    metadata:
      labels:
        app: greeter
        version: v2

    spec:
      containers:
      - name: greeter

        image: rakhicc/greeter:v2
        imagePullPolicy: Always
