greeter/manifests/greeterservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: greeter-svc

spec:
  ports:
  - port: 80
    targetPort: 3000

  selector:
    app: greeter
