greeter/manifests/greeterservice2.yaml
apiVersion: v1
kind: Service

metadata:
  name: greeter-svc-2

spec:
  ports:
  - port: 80
    targetPort: 3000

  selector:
    app: greeter
    version: v2
