greeter/manifests/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1

kind: HTTPRoute

metadata:
  name: greeter-route

spec:

  parentRefs:
  - group: ""
    kind: Service
    name: greeter-svc

  rules:

  - backendRefs:

    - name: greeter-svc-1
      port: 80
      weight: 75

    - name: greeter-svc-2
      port: 80
      weight: 25
